add undeline navbar

--- a/assets/css/style-addrecipe.css
+++ b/assets/css/style-addrecipe.css
@@ -10,6 +10,11 @@ body{
     color: #2E266F !important;
 }
 
+.active {
+    font-weight: bold !important;
+    border-bottom: #2E266F 5px solid !important;
+  }
+
 /* form input */
 .addphoto{
     margin-top: 100px;
